package grupo5.donaciones.dto.comunicaciones;

import java.util.UUID;

public record DonanteRegistradoDTO(UUID donanteId, String categoria) {}
