package grupo5.donaciones.models.entities.personas;

public enum TipoPersona {
  HUMANA,
  JURIDICA
}
