package grupo5.donaciones.models.entities.personas;

public enum TipoTelefono {
  ESTANDAR,
  WHATSAPP
}
